--- a/TestCourse/source/Householder_QR/week_2_Householder_QR.ipynb
+++ b/TestCourse/source/Householder_QR/week_2_Householder_QR.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -86,12 +86,11 @@
     "    y = np.zeros_like(vec)\n",
     "    y[0] = module\n",
     "    u = np.zeros_like(vec)\n",
-    "    u = (vec-y)/np.linalg.norm(vec-y)\n",
-    "    if abs(u[0])<1e-6:\n",
+    "    u = (vec - y) / np.linalg.norm(vec - y)\n",
+    "    if abs(u[0]) < 1e-6:\n",
     "        u[0] = -(sum(vec**2)-vec[0]**2)/(vec[0]+module) \n",
-    "    U = u.T\n",
-    "    H = np.identity(np.shape(vec)[0]) - 2 * np.dot(u.reshape(-1,1), U.reshape(1,-1))\n",
     "    \n",
+    "    H = np.identity(vec.shape[0]) - 2 * u[:, None] @ u[None, :]\n",
     "        \n",
     "    return y, H\n",
     "    ###END SOLUTION"
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -129,18 +128,20 @@
    },
    "outputs": [],
    "source": [
-    "# Тест I.1 (10% итоговой оценки).\n",
-    "\n",
     "v = np.array([1, 2, 3])\n",
     "v1, h = householder(v)\n",
     "\n",
-    "assert np.allclose(np.dot(h, v1), v)\n",
-    "assert np.allclose(np.dot(h, v), v1)"
+    "assert_allclose(h @ v1, v, atol=1e-14)\n",
+    "assert_allclose(h @ v, v1, atol=1e-14)\n",
+    "\n",
+    "assert_allclose(v1[1:], 0, atol=1e-14)\n",
+    "\n",
+    "assert_allclose(h @ h.T, np.eye(3), atol=1e-14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -154,15 +155,17 @@
    },
    "outputs": [],
    "source": [
-    "# Test I.2 (10% итоговой оценки).\n",
-    "\n",
-    "np.random.seed()\n",
-    "vec = np.random.uniform(size=7)\n",
+    "###BEGIN HIDDEN TEST\n",
+    "rndm = np.random.RandomState(1223)\n",
+    "vec = rndm.uniform(size=21)\n",
     "v1, h = householder(vec)\n",
     "\n",
-    "assert np.allclose(np.dot(h, v1), vec)\n",
-    "assert np.allclose(np.dot(h, vec), v1)\n",
-    "assert np.linalg.norm(v1[1:])==0"
+    "assert_allclose(h @ v1, vec, atol=1e-14)\n",
+    "assert_allclose(h @ vec, v1, atol=1e-14)\n",
+    "assert_allclose(v1[1:], 0, atol=1e-14)\n",
+    "\n",
+    "assert_allclose(h @ h.T, np.eye(h.shape[0]), atol=1e-14)\n",
+    "### END HIDDEN TEST"
    ]
   },
   {
@@ -178,26 +181,35 @@
     }
    },
    "source": [
-    "\n",
     "### Part II. Вычисление $\\mathrm{QR}$ - разложения матрицы.\n",
     "\n",
     "Дана прямоугольная $m\\times n$ матрица $\\mathbf{A}$. Выполните отражение Хаусхолдера матрицы $\\mathbf{H}_1$, преобразующее первый столбец матрицы $\\mathbf{A}$ (назовем результат $\\mathbf{A}^{(1)}$)\n",
-    "$$ \\mathbf{H}_1 \\mathbf{A} =% \\begin{pmatrix} \\times &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ &amp;&amp; \\dots&amp;&amp; \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ \\end{pmatrix}% \\equiv \\mathbf{A}^{(1)}\\;. $$\n",
+    "\n",
+    "$$ \n",
+    "\\mathbf{H}_1 \\mathbf{A} %\\begin{pmatrix} \\times &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ &amp;&amp; \\dots&amp;&amp; \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ \\end{pmatrix}\n",
+    "%\n",
+    "\\equiv \\mathbf{A}^{(1)}\\;. \n",
+    "$$\n",
     "\n",
     "Теперь рассмотрим нижнюю правую часть матрицы $\\mathbf{A}^{(1)}$ и выполним преобразование Хаусхолдера, действующее на 2 столбец $\\mathbf{A}$:\n",
-    "$$ \\mathbf{H}_2 \\mathbf{A}^{(1)} =% \\begin{pmatrix} \\times &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; 0 &amp; \\times &amp; \\dots &amp; \\times \\\\ &amp;&amp; \\dots&amp;&amp; \\\\ 0 &amp; 0 &amp; \\times &amp; \\dots &amp; \\times \\\\ \\end{pmatrix}% \\equiv \\mathbf{A}^{(2)} \\;. $$\n",
+    "$$\n",
+    "\\mathbf{H}_2 \\mathbf{A}^{(1)} % \\begin{pmatrix} \\times &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; \\times &amp; \\times &amp; \\dots &amp; \\times \\\\ 0 &amp; 0 &amp; \\times &amp; \\dots &amp; \\times \\\\ &amp;&amp; \\dots&amp;&amp; \\\\ 0 &amp; 0 &amp; \\times &amp; \\dots &amp; \\times \\\\ \\end{pmatrix}\n",
+    "%\n",
+    "\\equiv \\mathbf{A}^{(2)} \\;. $$\n",
     "\n",
-    "Повторяя процесс $n-1$ раз получим\n",
-    "$$ \\mathbf{H}_{n-1} \\cdots \\mathbf{H}_2 \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R} \\;, $$\n",
+    "Повторяя процесс $n$ раз, получим\n",
+    "$$\n",
+    "\\mathbf{H}_{n} \\cdots \\mathbf{H}_2 \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R} \\;, \n",
+    "$$\n",
     "\n",
-    "где $\\mathbf{R}$ верхнетреугольная матрица. Так как каждая $\\mathbf{H}_k$ ортогональна, таковым будет и их произведение. Обратная от ортогональной также есть матрица ортогональная. Таким образом, алгоритм создает $\\mathrm{QR}$ - разложение матрицы $\\mathbf{A}$.\n",
+    "где $\\mathbf{R}$ верхняя треугольная матрица. Так как каждая из матриц $\\mathbf{H}_k$ ортогональна, таковым будет и их произведение. Обратная от ортогональной также есть матрица ортогональная. Таким образом, алгоритм создает $\\mathrm{QR}$ - разложение матрицы $\\mathbf{A}$.\n",
     "\n",
-    "Напишите функцию, получающую прямоугольную матрицу $A$ и возвращающую Q и R - компоненты $QR$ - разложения $A$.\n"
+    "Напишите функцию, получающую прямоугольную матрицу $A$ и возвращающую матрицы $Q$ и $R$ --- компоненты $QR$-разложения $A$.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -223,13 +235,13 @@
     "    q : ndarray, shape(m, m)\n",
     "        Ортогональная матрица\n",
     "    r : ndarray, shape(m, n)\n",
-    "        Верхнетреугольная матрица\n",
+    "        Верхняя треугольная матрица\n",
     "        \n",
-    "    Example\n",
+    "    Examples\n",
     "    --------\n",
     "    >>> a = np.random.random(size=(3, 5))\n",
     "    >>> q, r = qr_decomp(a)\n",
-    "    >>> np.assert_allclose(np.dot(q, r), a)\n",
+    "    >>> np.testing.assert_allclose(q @ r, a, atol=1e-14)\n",
     "    \n",
     "    \"\"\"\n",
     "    a1 = np.array(a, copy=True, dtype=float)\n",
@@ -266,13 +278,13 @@
    },
    "outputs": [],
    "source": [
-    "# можете запустить данную операцию для более красивого вывода: нули вместо `1e-16` и т.д.\n",
+    "# можете запустить данную операцию для бооее сжатого вывода: нули вместо `1e-16` и т.д.\n",
     "np.set_printoptions(suppress=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 44,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -286,17 +298,22 @@
    },
    "outputs": [],
    "source": [
-    "# Тест II.1 (20% итоговой оценки)\n",
+    "# Тест II.1\n",
     "\n",
     "rndm = np.random.RandomState(1234)\n",
     "a = rndm.uniform(size=(5, 3))\n",
+    "aa = a.copy()\n",
+    "\n",
     "q, r = qr_decomp(a)\n",
     "\n",
+    "# check that `qr_decomp` leaves `a` intact\n",
+    "assert_allclose(a, aa, atol=1e-16)\n",
+    "\n",
     "# тестируем, что Q ортогональна\n",
-    "assert np.allclose(np.dot(q, q.T), np.eye(5), atol=1e-10)\n",
+    "assert_allclose(q @ q.T, np.eye(5), atol=1e-14)\n",
     "\n",
     "# проверяем разложение\n",
-    "assert np.allclose(np.dot(q, r), a)\n"
+    "assert_allclose(q @ r, a, atol=1e-14)"
    ]
   },
   {
@@ -316,8 +333,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Остальную часть задания необходимо сдать преподавателю как задание часть Б."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -333,26 +357,22 @@
     "from scipy.linalg import qr\n",
     "qq, rr = qr(a)\n",
     "\n",
-    "assert np.allclose(np.dot(qq, rr), a)"
+    "assert_allclose(np.dot(qq, rr), a,\n",
+    "                atol=1e-14)"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "nbgrader": {
-     "grade": false,
-     "grade_id": "cell-db51e35a1060b65e",
-     "locked": true,
-     "points": 1,
-     "schema_version": 3,
-     "solution": false,
-     "task": true
-    }
-   },
+   "metadata": {},
    "source": [
-    "Проверьте, согласуются ли ваши q и r с qq и rr. Объясните.\n",
-    "Оставьте пояснения в этой ячейке (10% итоговой оценки) "
+    "Проверьте, согласуются ли ваши матрицы `q` и `r` с `qq` и `rr`. Объясните результат.\n",
+    "Оставьте пояснения в этой ячейке."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -377,18 +397,16 @@
     "\n",
     "Таким образом, следует избегать формирований матриц $\\mathbf{H}$. Вместо этого можно сохранять сами векторы отражения $\\mathbf{u}$ и производить умножение произвольной матрицы на $\\mathbf{Q}^T$, например, как отдельную функцию (класс).\n",
     "\n",
-    "Напишите функцию, выполняющую QR - разложение матрицы без формирования матриц $\\mathbf{H}$ и возвращающую матрицу $\\mathbf{R}$, а также вектор отражения.\n",
+    "Напишите функцию, выполняющую QR - разложение матрицы без формирования матриц $\\mathbf{H}$ и возвращающую матрицу $\\mathbf{R}$, а также вектора отражений Хаусхолдера.\n",
     "\n",
-    "(20% итоговой оценки)\n",
     "\n",
-    "Напишите вторую функцию, которая использует вектор отражения чтобы перемножить матрицу с $\\mathbf{Q}^T$. Убедитесь, что вы добавили достаточно комментариев, следующих вашим выкладкам. \n",
-    "\n",
-    "(20% итоговой оценки)\n"
+    "Напишите вторую функцию, которая использует вектора отражений, полученных предыдущей функцией, для вычисления произведения $Q^T B$ для заданной матрицы B. Убедитесь, что вы добавили достаточно комментариев, следующих вашим выкладкам. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 85,
    "metadata": {
     "nbgrader": {
      "grade": false,
@@ -401,42 +419,101 @@
    },
    "outputs": [],
    "source": [
-    "def Qu(a):\n",
+    "def qr_nomatrix(a):\n",
+    "    \"\"\"Form QR decomposition of `a` via successive Householder reflections.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a : ndarray\n",
+    "        Input matrix\n",
+    "    \n",
+    "    Returns\n",
+    "    -------\n",
+    "    R : ndarray\n",
+    "        Upper triangular matrix of the QR decomposition\n",
+    "    \n",
+    "    U : ndarray\n",
+    "        Columns store successive Householder reflectors: `U[j:, j]` stores\n",
+    "        the Householder reflector for reducing the `j`-th column.\n",
+    "        \n",
+    "    See Also\n",
+    "    --------\n",
+    "    aU_to_R : apply Householder reflectors stored in `U` to `a`.\n",
+    "    \n",
+    "    \"\"\"\n",
     "    ###BEGIN SOLUTION\n",
     "    a1 = a.copy()\n",
     "    m,n = a.shape\n",
     "    U = np.zeros_like(a)\n",
     "\n",
-    "    for i in range(n if n<m else m-1):#Проверяем, какое измерение матрицы больше\n",
-    "        vec = a1[i:,i]#Вектор, который хотим повернуть - от диагонали и ниже\n",
+    "    for i in range(n if n<m else m-1):  # Проверяем, какое измерение матрицы больше\n",
+    "        vec = a1[i:,i]  # Вектор, который хотим повернуть - от диагонали и ниже\n",
     "        y = np.zeros_like(vec)\n",
     "        y[0] = np.linalg.norm(vec)\n",
-    "        u = np.zeros(m-i)#Наш reflection vector(вектор отражения?)\n",
-    "        u = (vec-y)/np.linalg.norm(vec-y)#Заполняем как в Хаусхолдере\n",
-    "        if abs(u[0])<1e-6:\n",
-    "            u[0] = -(sum(vec**2)-vec[0]**2)/(vec[0]+y[0])#Чтобы избежать зануления в случае, когда векторы почти параллельны\n",
-    "        a1[i:,i:] = a1[i:,i:] -  2 * np.dot(u.reshape(-1,1), (u @ a1[i:,i:]).reshape(1,-1))#Преобразование из инструкции\n",
+    "        u = np.zeros(m-i)  # Наш reflection vector(вектор отражения?)\n",
+    "        u = (vec - y) / np.linalg.norm(vec - y)  # Заполняем как в Хаусхолдере\n",
     "        \n",
-    "        U[i:,i] = u#Нужный столбик матрицы заполняем нашим вектором\n",
+    "        # Чтобы избежать зануления в случае, когда векторы почти параллельны\n",
+    "        if abs(u[0])<1e-6:\n",
+    "            u[0] = -(sum(vec**2) - vec[0]**2) / (vec[0] + y[0])\n",
+    "\n",
+    "        a1[i:, i:] = a1[i:, i:] -  2*u[:, None] @ (u @ a1[i:, i:]).reshape(1,-1)\n",
+    "\n",
+    "        U[i:, i] = u  # Нужный столбик матрицы заполняем нашим вектором\n",
     "    return a1, U\n",
     "    ###END SOLUTION\n",
     "\n",
+    "    \n",
+    "def householder_apply(b, uu):\n",
+    "    \"\"\"Apply the Householder reflectors stored in `uu` to `b`.\n",
+    "    \n",
+    "    The result is equivalent to\n",
+    "    >>> r, q = qr_decomp(a)\n",
+    "    >>> q.T @ b\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    b : ndarray\n",
+    "        Input matrix\n",
+    "    uu : ndarray\n",
+    "        Householder reflectors: `U[j:, j]` is the reflection vector\n",
+    "        for transforming the `j`-th column of `a`.\n",
+    "        \n",
+    "    Returns\n",
+    "    -------\n",
+    "    r : ndarray\n",
+    "        The result of applying the reflectors to `b`. Equivalent to\n",
+    "        computing `q.T @ b`.\n",
+    "\n",
+    "    See Also\n",
+    "    --------\n",
+    "    qr_decomp\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    ###BEGIN SOLUTION\n",
+    "    \n",
+    "    # FIXME\n",
+    "    \n",
+    "    ###END SOLUTION\n",
+    "\n",
+    "    \n",
     "def aU_to_R(a, U):\n",
     "    ###BEGIN SOLUTION\n",
     "    a1 = a.copy()\n",
-    "    m,n = a.shape\n",
+    "    m, n = a.shape\n",
     "    R = a1.copy()\n",
     "\n",
-    "    for i in range(n if n<m else m-1):\n",
-    "        u = U[i:,i]#Берем i-тый вектор отражения\n",
-    "        R[i:,i:] = R[i:,i:] - 2 * np.dot(u.reshape(-1,1), (u @ R[i:,i:]).reshape(1,-1))#Находим (1-2u_i@u_i.T)a \n",
+    "    for i in range(n if n < m else m - 1):\n",
+    "        u = U[i:, i]  # Берем i-тый вектор отражения\n",
+    "        # Находим (1 - 2u_i @ u_i.T)a \n",
+    "        R[i:, i:] = R[i:, i:] - 2 * np.dot(u[:, None], (u @ R[i:,i:]).reshape(1,-1))\n",
     "    return R\n",
     "    ###END SOLUTION"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 86,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -450,21 +527,22 @@
    },
    "outputs": [],
    "source": [
-    "name1 = \"Test 1: square matrix\"\n",
-    "a = rndm.uniform(size=(5,5))\n",
+    "a = rndm.uniform(size=(5, 5))\n",
     "R1, U = Qu(a)\n",
     "R2 = aU_to_R(a, U)\n",
-    "R_lib = qr(a)[1]\n",
-    "assert np.allclose(R1, R2), 'Falied in'+name1\n",
+    "assert_allclose(R1, R2, atol=1e-14)\n",
     "\n",
     "###BEGIN HIDDEN TESTS\n",
     "name2 = \"Test 2: vertical rectangular matrix\"\n",
-    "a2 = rndm.uniform(size=(5,3))\n",
+    "a2 = rndm.uniform(size=(5, 3))\n",
     "R1, U = Qu(a2)\n",
     "R22 = aU_to_R(a2, U)\n",
-    "R_lib2 = qr(a2)[1]\n",
-    "#print('R from the 1 function',R1,'R from the 2 function', R2,'R_lib',qr(a)[1],sep='\\n')\n",
+    "\n",
     "assert np.allclose(R1, R22), 'Falied in'+name2\n",
+    "\n",
+    "assert_allclose(R1, R22)\n",
+    "\n",
+    "\n",
     "name3 = \"Test 3: horizontal rectangular matrix\"\n",
     "a3 = rndm.uniform(size=(3,5))\n",
     "R1, U = Qu(a3)\n",
@@ -476,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 65,
    "metadata": {
     "nbgrader": {
      "grade": true,
@@ -496,6 +574,50 @@
     "assert False not in [np.allclose(R23[i,:],R_lib3[i,:]) or np.allclose(R23[i,:],-R_lib3[i,:]) for i in range(3)]\n",
     "###END HIDDEN TESTS"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### TESTS\n",
+    "\n",
+    "rndm = np.random.RandomState(1234)\n",
+    "a = rndm.uniform(size=(5, 3))\n",
+    "\n",
+    "q, r = qr_decomp(a)\n",
+    "rr, uu = qr_nomatrix(a)\n",
+    "\n",
+    "# check consistency\n",
+    "assert_allclose(np.triu(r),\n",
+    "                np.triu(rr), atol=1e-14)\n",
+    "\n",
+    "# $Q^T @ A = R$\n",
+    "assert_allclose(householder_apply(a, uu),\n",
+    "                r,\n",
+    "                atol=1e-14)\n",
+    "\n",
+    "# act on a different matrix\n",
+    "b = rndm.uniform(size=(5, 3))\n",
+    "assert_allclose(householder_apply(b, uu),\n",
+    "                q.T @ b,\n",
+    "                atol=1e-14)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -515,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
